
[project]
name = "Test-Programmier-bung"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ha1267", email = "ha1267@mci4me.at"},
]
dependencies = ["streamlit>=1.46.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
